--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -7,7 +7,7 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "server=(localdb)\\.;Database=Bulky;Trusted_Connection=True;TrustServerCertificate =True"
+        "DefaultConnection": "server=.;Database=Bulky;Trusted_Connection=True;TrustServerCertificate =True"
 
     }
 }
