fix .net 8 to .net 6 packages

--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "server=.;Database=Bulky;Trusted_Connection=True;TrustServerCertificate =True"
+  "ConnectionStrings": {
+    "DefaultConnection": "server=(localdb)\\.;Database=Bulky;Trusted_Connection=True;TrustServerCertificate =True"
 
-    }
+  }
 }
